In the political hub of Washington, D.C., rumors are swirling around the White House. Allegedly, a bill has been proposed by a high ranking official in the administration, causing a stir amoung congressional leaders. Both Republican and Democrat senators and representatives are eager to weigh in on the matter, and the Secretary of State has been called to testify before Congress. The President, meanwhile, is remaining tight-lipped on the issue, fueling speculation about the potential impact of this proposed legislation.  