@@ -3,11 +3,11 @@
     "allegedly":"totally",
     "bill":"tiktok I forgot to save",
     "official":"puppy",
-    "congressional":"spaaaaace",
-    "republican":"piano accordionist",
+    "governor":"spaaaaace",
+    "GOP-controlled House":"piano accordionist",
     "democrat":"chromatic button accordionist",
     "senator": "magical wizard",
-    "representative": "unmagical wizard",
+    "congress": "unmagical wizard",
     "secretary":"eating champion",
     "leaders":"goblins",
     "washington":"Mount Doom",
