@@ -1,1 +1,5 @@
-In the political hub of Washington, D.C., rumors are swirling around the White House. Allegedly, a bill has been proposed by a high ranking official in the administration, causing a stir amoung congressional leaders. Both Republican and Democrat senators and representatives are eager to weigh in on the matter, and the Secretary of State has been called to testify before Congress. The President, meanwhile, is remaining tight-lipped on the issue, fueling speculation about the potential impact of this proposed legislation.  
+But those days were relegated to the dustbin of history on March 23, 2010, when President Obama signed the Affordable Care Act (ACA) into law. Of course, as we mark the ACA’s 13th anniversary, it’s easy to forget the political costs of that “miracle” legislation. 
+
+To begin with, it took years for Congress to draft and vote on the health care law. Then, the GOP made repealing the ACA its priority in the 2010 midterm elections. They demonized the law — labeled as “ObamaCare” — threw in a couple of racist dog whistles and, with a nationwide disinformation campaign, rode a wave that won them back control of the House of Representatives and flipped 12 governor’s offices, including Ohio, Pennsylvania, New Mexico and Michigan. This ushered in an era of obstructionism that defined Congress for several years.
+
+In fact, the GOP-controlled House voted more than 50 times to repeal the ACA, ignoring the tens of millions of Americans who got health insurance, and countless others who have benefitted from the Patient’s Bill of Rights. Ironically, the single-minded devotion that won Republicans the House majority in 2010 would cost them that majority in 2018, following a systematic education campaign that took the debate from abstract political philosophy to one centered on concrete reality.
